# AI-Vision-Director

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.security_scan/quarantine_reports/: fungame_security_scan.md
.security_scan/quarantine_suspicious/: fungame_refined_risk.csv
code/V1/: app.py  feature_gallery.py  identity_manager.py  reid_embedding.py  self_test.py  test_desktop_optimizations.py  test_track_shot_plan.py  test_tracking_server.py  tracking_server.py  vehicle_identity_store.py  video_detector.py
docs/: autocamtracker-development-log.txt
docs/architecture/: README.md  application-layer.md  baseline-v1.0-alpha.1.md  baseline-v1.0.md  baseline-v1.77.md  camera-calibration-gmc.md  framing-engine.md  (+13 more)
evaluation/: gid_loss_scenarios.json
github-project-import/: README.md  current-iteration-guide.md  current-iteration-items.csv
tests/: test_application_layer.py  test_bootstrap.py  test_camera_calibration_gmc.py  test_camera_control_policy.py  test_desktop_optimizations.py  test_diagnostics.py  test_domain_contracts.py  test_feature_gallery_components.py  test_framing_engine.py  test_gid_loss_benchmark.py  test_identity_components.py  test_offline_replay.py  test_performance_evaluation.py  test_qt_ui.py  test_sqlite_threading.py  test_timestamp_pipeline.py  test_tracking_server.py  test_vision_backends.py  test_websocket_components.py
tools/: AI-Vision-Director-V1.0.command  AI_Vison_Director_V1.0-alpha.1.command  AutoCamTracker_V1.74.command  AutoCamTracker_V1.77.command  AutoCamTrackerteam-final-v1.77.command
(+119 files in other folders)
