[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AI_Vison_Director"
version = "1.0-alpha.1"
description = "AI vision direction, vehicle tracking, and digital reframing tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics==8.4.64",
    "filterpy==1.4.5",
    "mss==10.2.0",
    "opencv-python==4.13.0.92",
    "pillow==12.2.0",
    "yt-dlp>=2024.8.6",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "websockets>=13.0,<17.0",
]

[project.scripts]
AI_Vison_Director = "autocamtracker.main:main"

[tool.setuptools.packages.find]
where = ["src"]
